[tool.poetry]
name = "probot"
version = "0.1.0"
description = "code review bot"
authors = ["sowndharyam <sowndharyams01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
